[gd_scene load_steps=2 format=3 uid="uid://w6esoq0v50c8"]

[ext_resource type="Script" uid="uid://ylqbld0014uo" path="res://scripts/character_creation/Step4_SpecialtyChoice.gd" id="1"]

[node name="Step4_SpecialtyChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Header" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "⚙️ Technical 특장점"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "기술적 능력에서 가장 뛰어난 3가지를 선택하세요"
horizontal_alignment = 1

[node name="CADisplay" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
alignment = 1

[node name="CurrentCA" type="Label" parent="ScrollContainer/VBoxContainer/Header/CADisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "현재 CA: 80"

[node name="ProjectedCA" type="Label" parent="ScrollContainer/VBoxContainer/Header/CADisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "예상 CA: 80"

[node name="SelectionInfo" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
alignment = 1

[node name="CountLabel" type="Label" parent="ScrollContainer/VBoxContainer/Header/SelectionInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "선택됨: 0/3"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="ScrollContainer/VBoxContainer/Header/SelectionInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "3개의 특장점을 선택하세요"
horizontal_alignment = 1

[node name="SpecialtyButtons" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
